<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

   <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/mode"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:visibility="gone" />

    <TextView
        android:id="@+id/mode"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"     
        android:visibility="gone" />
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/ssid"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:visibility="gone" />

    <TextView
        android:id="@+id/ssid"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"     
        android:visibility="gone" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/password"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="gone" />

    <TextView
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"     
        android:visibility="gone" />
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/pin"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="gone" />

    <TextView
        android:id="@+id/pin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"     
        android:visibility="gone" />

    <TextView        
        android:id="@+id/token_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/token"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:visibility="gone" />

    <TextView
        android:id="@+id/token"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:gravity="center"     
        android:visibility="gone" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="configure"
        android:text="@string/configure_an_imp" />
    
    <Button
        android:id="@+id/acquire_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="4dp"
        android:onClick="acquireSetupToken"
        android:text="@string/acquire_setup_token" />

</LinearLayout>